# driftcode-auditor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  driftcode-report.md  pyproject.toml  simgame-full-report.md
.github/: FUNDING.yml
.github/DISCUSSION_TEMPLATE/: what_the_tool_caught.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  what_i_caught.md
.github/workflows/: driftcode-audit.yml
src/: cli.py  config.py  gitignore.py  reporter.py  rules.py  scanner.py
src/driftcode_auditor/: cli.py  config.py  reporter.py  rules.py  scanner.py
src/driftcode_auditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_auditor.py
