[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "driftcode-auditor"
version = "0.2.1"
description = "Local-first CLI for auditing AI-generated code for common mistakes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Drift", email = "drift.zev@proton.me"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Intended Audience :: Developers",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
driftcode-auditor = "driftcode_auditor.cli:main"

[project.urls]
Homepage = "https://github.com/DriftApplied/driftcode-auditor"
Repository = "https://github.com/DriftApplied/driftcode-auditor"
Issues = "https://github.com/DriftApplied/driftcode-auditor/issues"
